syntax = "proto3";
package consumer.oracleconsumer;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";


option go_package = "consumer/x/oracleconsumer/types";

// this line is used by starport scaffolding # proto/tx/import


// Msg defines the Msg service.
service Msg {
      rpc SetRequestInterval(MsgSetRequestInterval) returns (MsgSetRequestIntervalResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgSetRequestInterval {
  uint64 oracle_script_id = 1;
  bytes calldata = 2;
  uint64 block_interval = 3;
  uint64 ask_count = 4;
  uint64 min_count = 5;
  repeated cosmos.base.v1beta1.Coin fee_limit = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  uint64 prepare_gas = 7;
  uint64 execute_gas = 8;
  string source_channel = 9;
  string sender = 10;
}

message MsgSetRequestIntervalResponse {
  uint64 request_interval_id = 1;
}
